--- a/apps/data/priv/templates/auth/verify_email.html.eex
+++ b/apps/data/priv/templates/auth/verify_email.html.eex
@@ -12,8 +12,8 @@
                                     src="http://cdn.mcauto-images-production.sendgrid.net/3726832b45872c91/67f52ec2-39b1-4ade-84d8-9eac6f9d3280/47x38.png" />
                             </td>
                         </tr>
-                        <tr class="qampus-style">
-                            <td align="center" class="qampus-style">MyQampus</td>
+                        <tr class="quriosity-style">
+                            <td align="center" class="quriosity-style">MyQampus</td>
                         </tr>
                     </tbody>
                 </table>
