--- a/apps/data/priv/templates/layout/registeration_complete_layout.html.eex
+++ b/apps/data/priv/templates/layout/registeration_complete_layout.html.eex
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
     <title>Email Confirmation</title>
     <style type="text/css">
-        .qampus-style {
+        .quriosity-style {
             color: #1d273e;
         }
 
