Fix filter issue and email template

--- a/apps/quiz_generator/priv/templates/auth/verify_email.html.eex
+++ b/apps/quiz_generator/priv/templates/auth/verify_email.html.eex
@@ -13,7 +13,7 @@
                             </td>
                         </tr>
                         <tr class="quriosity-style">
-                            <td align="center" class="quriosity-style">MyQampus</td>
+                            <td align="center" class="quriosity-style">My Quriosity</td>
                         </tr>
                     </tbody>
                 </table>
@@ -26,7 +26,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td align="center" class="title">Welcome to MyQampus!</td>
+                            <td align="center" class="title">Welcome to MyQuriosity!</td>
                         </tr>
 
                         <tr>
